--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,9 @@
+{% extends '_base.html' %}
+
+{% block page_title %}
+Home
+{% endblock page_title %}
+
+{% block content %}
 Home Page
+{% endblock content %}
